# code_dmd

./: .gitattributes  .gitignore  LICENSE  README.md  platformio.ini  projects.md  signals.md
contrib/python/: .project  displaydat.py  displayspi.py  storespi.py
contrib/python/dmddisplay/: console_display.py  raylib_display.py
docs/: install-openocd.md
logicanalyzer/: sam-rdata.LPF  sam.LPF  spike1-rdata.LPF  spike1.LPF  whitestar-rdata.LPF  whitestar1.LPF  wpc.LPF  wpc2.LPF  wpc3-rdata.LPF
pi/: displayspi.py  readserial.py  readspi.py
pi/c/DMDReader/: CMakeLists.txt  CMakeSettings.json  crc32.h  dmddata.h  dmdframe.cpp  dmdframe.h  dmdreader.cpp  dmdreader.h
pi/c/DMDReader/dmd/: color.cpp  color.h  dmdframe.cpp  dmdframe.h  dmdsource.cpp  dmdsource.h  frameprocessor.cpp  frameprocessor.h  pubcapture.cpp  pubcapture.h
pi/c/DMDReader/render/: framerenderer.cpp  framerenderer.h  raylibrenderer.cpp  raylibrenderer.h
pi/c/DMDReader/util/: bmp.cpp  bmp.h  crc32.cpp  crc32.h  endian.h  image.cpp  image.h  numutils.cpp  numutils.h  objectfactory.cpp  objectfactory.h
pi/python/: displaydat.py  storespi.py
pi/python/dmddisplay/: console.py  console_display.py
pico/: start-vsc
pico/dmdreader/: CMakeLists.txt  dmd_counter.pio  dmd_interface_whitestar.pio  dmd_interface_wpc.pio  dmdreader.c  pio_usage.txt
scripts/: install-software
src/: CMakeLists.txt  compile.sh  crc32.c  crc32.h  dmd_interface_sam.pio  dmd_interface_wpc.pio  dmdreader.c  main.c  program-pbos.sh  start-vsc
src/dmdreader/: dmd_counter.pio  dmd_interface_sam.pio  dmd_interface_spike.pio  dmd_interface_wpc.pio  dmdreader.c  program-pico.sh  raspberrypi-swd-dmdreader.cfg  spi_slave_sender.pio
